temp/Age_in_Days_Months_Year/logs/crtrans.log
2025-12-07 14:01:40 [INFO] __main__ - Using C file: /work/CRTrans/C/github/Age_in_Days_Months_Year.c
2025-12-07 14:01:40 [INFO] crtrans.info_builder - Compiling C: gcc -O0 /work/CRTrans/C/github/Age_in_Days_Months_Year.c -o temp/Age_in_Days_Months_Year/c_binary
2025-12-07 14:01:40 [INFO] crtrans.prompting - Calling DeepSeek with 1333 tokens of messages
2025-12-07 14:02:12 [INFO] crtrans.info_builder - LLM info parse failed; using deterministic fallback
2025-12-07 14:02:12 [INFO] crtrans.info_builder - Wrote info.md to temp/Age_in_Days_Months_Year/info.md
2025-12-07 14:02:12 [INFO] crtrans.c2rust_wrapper - Wrote compile_commands.json at temp/Age_in_Days_Months_Year/compile_commands.json
2025-12-07 14:02:12 [INFO] crtrans.c2rust_wrapper - Running c2rust: c2rust transpile --emit-build-files --output-dir temp/Age_in_Days_Months_Year/c2rust temp/Age_in_Days_Months_Year/compile_commands.json
2025-12-07 14:02:12 [INFO] __main__ - Iteration budget set to 11 (lines=29, chunks=2, cli_min=10)
2025-12-07 14:02:12 [INFO] crtrans.prompting - Calling DeepSeek with 1018 tokens of messages
2025-12-07 14:02:32 [INFO] crtrans.prompting - Calling DeepSeek with 3529 tokens of messages
2025-12-07 14:03:29 [INFO] crtrans.prompting - Calling DeepSeek with 3085 tokens of messages
2025-12-07 14:04:19 [INFO] __main__ - Wrote assembled Rust to temp/Age_in_Days_Months_Year/translated.rs
2025-12-07 14:04:19 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:04:19 [ERROR] crtrans.rust_checker - rustc failed:
error: unexpected closing delimiter: `)`
 --> temp/Age_in_Days_Months_Year/translated.rs:9:1
  |
1 | fn age() {} { unimplemented!(); }
  |             -                   - ...matches this closing brace
  |             |
  |             this opening brace...
...
9 | ) {
  | ^ unexpected closing delimiter

error: aborting due to 1 previous error


2025-12-07 14:04:19 [WARNING] __main__ - rustc failed; invoking LLM fix iteration 1
2025-12-07 14:04:19 [INFO] crtrans.prompting - Calling DeepSeek with 1512 tokens of messages
2025-12-07 14:05:55 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:05:55 [ERROR] crtrans.rust_checker - rustc failed:
error[E0601]: `main` function not found in crate `translated`
  --> temp/Age_in_Days_Months_Year/translated.rs:26:2
   |
26 | }
   |  ^ consider adding a `main` function to `temp/Age_in_Days_Months_Year/translated.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.

2025-12-07 14:05:55 [WARNING] __main__ - rustc failed; invoking LLM fix iteration 2
2025-12-07 14:05:55 [INFO] crtrans.prompting - Calling DeepSeek with 1483 tokens of messages
2025-12-07 14:06:43 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:06:44 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 1
2025-12-07 14:06:44 [INFO] crtrans.prompting - Calling DeepSeek with 1435 tokens of messages
2025-12-07 14:10:06 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:10:06 [ERROR] crtrans.rust_checker - rustc failed:
error[E0601]: `main` function not found in crate `translated`
  |
  = note: consider adding a `main` function to `temp/Age_in_Days_Months_Year/translated.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.

2025-12-07 14:10:06 [INFO] __main__ - Fix iteration produced compile errors; attempting next iteration (syntax takes priority)
2025-12-07 14:10:06 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 2
2025-12-07 14:10:06 [INFO] crtrans.prompting - Calling DeepSeek with 709 tokens of messages
2025-12-07 14:11:56 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:11:57 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 3
2025-12-07 14:11:57 [INFO] crtrans.prompting - Calling DeepSeek with 4878 tokens of messages
2025-12-07 14:15:10 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:15:10 [ERROR] crtrans.rust_checker - rustc failed:
error[E0601]: `main` function not found in crate `translated`
  |
  = note: consider adding a `main` function to `temp/Age_in_Days_Months_Year/translated.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.

2025-12-07 14:15:10 [INFO] __main__ - Fix iteration produced compile errors; attempting next iteration (syntax takes priority)
2025-12-07 14:15:10 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 4
2025-12-07 14:15:10 [INFO] crtrans.prompting - Calling DeepSeek with 851 tokens of messages
2025-12-07 14:17:28 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:17:29 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 5
2025-12-07 14:17:29 [INFO] crtrans.prompting - Calling DeepSeek with 5359 tokens of messages
2025-12-07 14:19:51 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:19:52 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 6
2025-12-07 14:19:52 [INFO] crtrans.prompting - Calling DeepSeek with 4826 tokens of messages
2025-12-07 14:22:29 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:22:29 [ERROR] crtrans.rust_checker - rustc failed:
error[E0716]: temporary value dropped while borrowed
  --> temp/Age_in_Days_Months_Year/translated.rs:63:22
   |
63 |       let mut tokens = input
   |  ______________________^
64 | |         .join(" ")
   | |__________________^ creates a temporary value which is freed while still in use
65 |           .split_whitespace()
66 |           .map(|s| s.parse::<i32>());
   |                                     - temporary value is freed at the end of this statement
67 |
68 |       let n: usize = match tokens.next() {
   |                            ------ borrow later used here
   |
help: consider using a `let` binding to create a longer lived value
   |
63 ~     let binding = input
64 +         .join(" ");
65 ~     let mut tokens = binding
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.

2025-12-07 14:22:29 [INFO] __main__ - Fix iteration produced compile errors; attempting next iteration (syntax takes priority)
2025-12-07 14:22:29 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 7
2025-12-07 14:22:29 [INFO] crtrans.prompting - Calling DeepSeek with 4952 tokens of messages
2025-12-07 14:25:05 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:25:05 [INFO] __main__ - Output mismatches detected; invoking LLM fix iteration 8
2025-12-07 14:25:05 [INFO] crtrans.prompting - Calling DeepSeek with 5274 tokens of messages
2025-12-07 14:27:23 [INFO] crtrans.rust_checker - Compiling Rust: rustc --edition 2021 temp/Age_in_Days_Months_Year/translated.rs -o temp/Age_in_Days_Months_Year/translated
2025-12-07 14:27:23 [INFO] __main__ - Outputs match for provided samples
2025-12-07 14:27:23 [INFO] __main__ - Saved final Rust to rust/Age_in_Days_Months_Year.rs
2025-12-07 14:27:23 [INFO] crtrans.prompting - Calling DeepSeek with 6304 tokens of messages
2025-12-07 14:28:30 [INFO] __main__ - Wrote final equivalence report to temp/Age_in_Days_Months_Year/report_Age_in_Days_Months_Year.md
